--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-langchain
-langchain-openai
-python-dotenv
-openai
-psycopg2-binary
 streamlit
+psycopg2-binary
+python-dotenv
+langchain
+langchain-community
+langchain-openai
 chromadb
+tiktoken
+pypdf
+openai
